--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ p{
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     line-height: 1.6;
-    background-color: lightblue;
-    color: black;
+    background-color: black;
+    color: white;
     margin: 0;
     padding: 0;
 }
@@ -21,15 +21,15 @@ body {
   /* Styles for screens smaller than 768px (e.g., phones) */
   @media (max-width: 767.98px) {
     body {
-      background-color: lighblue;
-      color: black;
+      background-color: black;
+      color: greenyellow;
     }
   }
   
   /* Styles for screens larger than or equal to 768px (e.g., tablets and desktops) */
   @media (min-width: 768px) {
     body {
-      background-color: lightblue;
+      background-color: black;
       color : red;
     }
   }
