--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   @media (min-width: 768px) {
     body {
       background-color: black;
-      color : red;
+      color : blue;
     }
   }
   
